# Photogrametry

./: .dockerignore  .env  .env.example  .gitignore  PROJECT_STRUCTURE_ANALYSIS.md  README.md  REFINED_STRUCTURE_SUMMARY.md  STEP_BY_STEP_GUIDE.md  check_db.py  docker-compose.yml  dockerfile  entrypoint.sh  output.txt  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 09fa697858c6_added_model_url_and_error_to_scanjob.py  150f60276b47_added_initializing_uploading_to_.py  1a5c58421ec4_added_scan_images_table.py  40ed42d695fa_added_warnings_column.py  48aee3ba041d_added_project_name_to_scanjob.py  5814c67855b0_initial_migration.py  900a2513b481_added_cancelled_status.py  abcd1234efgh_add_progress_and_updated_at.py  e37dcc9482f1_merge_heads.py
app/: db.py  main.py  models.py  schemas.py
app/core/: cloudinary_utils.py
app/routes/: scans.py
app/services/: cloudinary_service.py  image_processing.py
app/static/: index.html
backend/: main.py
backend/api/: scans.py  upload.py  workers.py
backend/core/: cloudinary_utils.py  config.py  db.py
backend/models/: models.py  schemas.py
backend/queue/: manager.py
backend/services/: cloudinary_service.py  validation.py
backend/task_queue/: manager.py
core/: __init__.py
core/utils/: __init__.py  (+3 more)
frontend/: index.html  mobile.html  model_ysd35c.glb
scripts/: analyze_pcd.py  kaggle_worker.py  monitor_worker.py  ngrok_status.py  start.py  submit_bottle_job.py  test_pipeline_run.py  test_turtle_run.py  test_upload.py
tests/: test_optimizations.py
(+14 files in other folders)
